--- a/templates/About.html
+++ b/templates/About.html
@@ -1,4 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>About Page</h2>
+    <div class="about-members">
+    <div class="col-md-2"></div>
+    <div class="col-md-2">
+        <img class="members" src="../media/images/Barista1.jpg">
+        <h1>
+            Bex Manning
+        </h1>
+        <p>
+            Founder of Starbex.
+        </p>
+    </div>
+        <div class="col-md-1"></div>
+    <div class="col-md-2">
+        <img class="members" src="../media/images/Barista2.jpg">
+        <h1>
+            Mr Fairtrade
+        </h1>
+        <p>
+            Founder of Starbex.
+        </p>
+    </div>
+        <div class="col-md-1"></div>
+    <div class="col-md-2">
+        <img class="members" src="../media/images/Barista3.jpg">
+        <h1>
+            Miss Brewtiful
+        </h1>
+        <p>
+            Founder of Starbex.
+        </p>
+    </div>
+    <div class="col-md-2"></div>
+    </div>
+
+    <hr width="100%">
+
+    <p class="col-sm-12">Lorem blah blah blah </p>
 {% endblock %}
