--- a/templates/coffees/coffees.html
+++ b/templates/coffees/coffees.html
@@ -2,7 +2,9 @@
 {% load coffee_extras %}
 {% block content %}
 
-    <div class="Buy-img"></div>
+    <div class="Buy-img">
+        <h2>Purchase</h2>
+    </div>
 
     <table class="table table-striped">
         <thead>
