--- a/templates/index.html
+++ b/templates/index.html
@@ -12,19 +12,20 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner gallery0" role="listbox">
         <div class="item active">
-            <img src="https://cdn.pixabay.com/photo/2016/08/07/16/23/coffee-1576537_960_720.jpg" alt="...">
+            <img src="../media/images/Coffee6.jpg" alt="...">
+            <h2>Price</h2>
         </div>
 
         <div class="item">
-            <img src="https://cdn.pixabay.com/photo/2013/11/05/23/55/coffee-206142_960_720.jpg" alt="...">
+            <img src="../media/images/Coffee7.jpg" alt="...">
         </div>
 
         <div class="item">
-            <img src="https://cdn.pixabay.com/photo/2016/08/07/16/23/coffee-1576537_960_720.jpg" alt="...">
+            <img src="../media/images/Coffee8.jpg" alt="...">
         </div>
 
         <div class="item">
-            <img src="https://cdn.pixabay.com/photo/2013/11/05/23/55/coffee-206142_960_720.jpg" alt="...">
+            <img src="../media/images/Coffee9.jpg" alt="...">
         </div>
     </div>
 
