--- a/templates/price.html
+++ b/templates/price.html
@@ -19,7 +19,7 @@
                 <tr>
                     <td>{{ coffee.name }}</td>
                     <td>{{ coffee.description }}</td>
-                    <td>${{ coffee.price }}</td>
+                    <td>£{{ coffee.price }}</td>
                 </tr>
             {% endfor %}
         </tbody>
