--- a/templates/forum/comment_details.html
+++ b/templates/forum/comment_details.html
@@ -1,17 +1,18 @@
 {% load thread_extras %}
 <div class="details">
-   <div class="col-md-6">
+   <div class="col-md-9">
        <div class="pull-left">
            <time datetime="{{ post.created_at }}">
-              Posted: {{ post.created_at|started_time }}
+              <p><i><b>{{ post.user.first_name }} {{ post.user.last_name }}</b>
+               | <b>Posted:</b> {{ post.created_at|started_time }} </i></p>
            </time>
        </div>
    </div>
-   <div class="col-md-6">
+   <div class="col-md-3">
        <div class="pull-right">
          {% if post.user == user or user.is_staff %}
-           <a href="{% url 'edit_post' thread.id post.id %}">hi<i class="fa fa-pencil-square-o"></i></a>
-           <a href="{% url 'delete_post' thread.id post.id %}">hi<i class="fa fa-trash-o"></i></a>
+           <a href="{% url 'edit_post' thread.id post.id %}"><i class="fa fa-pencil-square-o"></i></a>
+           <a href="{% url 'delete_post' thread.id post.id %}"><i class="fa fa-trash-o"></i></a>
          {% endif %}
        </div>
    </div>
