--- a/templates/forum/forum.html
+++ b/templates/forum/forum.html
@@ -9,22 +9,16 @@
    {% load bootstrap_tags %}
    {% for subject in subjects %}
        <section class="subject">
-           <h2><a href="{% url "threads" subject.id %}">{{ subject.name }}</a></h2>
+           <h2 class="subject-name"><a href="{% url "threads" subject.id %}">{{ subject.name }}</a></h2>
            <p>
                <a href="{% url "threads" subject.id %}">
                    {% autoescape off %}{{ subject.description }}{% endautoescape %}
                </a>
            </p>
-           <table>
-               <tr>
-                   <th>THREADS</th>
-                   <th> POSTS</th>
-               </tr>
-               <tr>
-                   <td>{{ subject.threads.count }}</td>
-                   <td>{{ subject|get_total_subject_posts }}</td>
-               </tr>
-           </table>
+           <p>
+               <b>Threads</b> {{ subject.threads.count }} |
+               <b>Posts</b> {{ subject|get_total_subject_posts }}
+           </p>
        </section>
    {% endfor %}
 {% endblock %}
