--- a/templates/forum/post.html
+++ b/templates/forum/post.html
@@ -1,18 +1,19 @@
 {% load staticfiles %}
 {% load emoticons_tags %}
-<section class="row comment col-md-9">
- <div class="col-md-3 comment-profile">
-   <p><img src="{% static 'images/user.png' %}" /></p>
-   <p>{{ post.user.username }}</p>
-   <p>{{ post.user.posts.count }} POSTS</p>
- </div>
- <div class="col-md-9 ">
-   <div class="comment-content">
-     {% autoescape off %}
-       {{ post.comment|emoticons }}
-     {% endautoescape %}
-   </div>
-   {% include "forum/comment_details.html" %}
- </div>
+<section class="row comment">
+    <div class="col-md-3 comment-profile">
+        <div class="thread-image">
+            <div><p><b>{{ post.user.first_name|make_list|first }}{{ post.user.last_name|make_list|first }}</b></p></div>
+        </div>
+        <p>{{ post.user.posts.count }} POSTS</p>
+    </div>
+    <div class="col-md-9 ">
+        <div class="comment-content">
+            {% autoescape off %}
+                {{ post.comment|emoticons }}
+            {% endautoescape %}
+        </div>
+        {% include "forum/comment_details.html" %}
+    </div>
 
 </section>
