--- a/templates/forum/thread.html
+++ b/templates/forum/thread.html
@@ -5,35 +5,25 @@
 
  <div class="row header">
 
-   <div class="container">
-     <h2>{{ thread.name }}</h2>
-     <div class="col-md-12">
-         <table class="table">
-             <tbody>
-             <tr>
-                 <th>
-                   CREATED
-                 </th>
-                 <th>OWNER</th>
-                 <th>LAST POST</th>
-             </tr>
-             <tr>
-                 <td>
-                   <time datetime="{{ thread.created_at }}">
-                    {{ thread.created_at|started_time }}
-                   </time>
-                 </td>
-                 <td>{{ thread.user.username }}</td>
-                 <td>{% last_posted_user_name thread %}</td>
-             </tr>
-           </tbody>
-         </table>
+ <div class="row header">
+   <div class="jumbotron"><h1>{{ thread.name }}</h1></div>
+ </div>
+
+    <p class="align-center"><a href="/forum/"><b>Forum</b></a> | <b>Subject:</b> | <b>Thread:</b> {{ thread.name }}</p>
+    <hr>
+     <div class="col-md-7 posts">
+         {% for post in thread.posts.all %}
+             {% include "forum/post.html" %}
+           {% endfor %}
+
      </div>
+
+    <div class="col-md-5">
         {% if thread.poll %}
-           <div class="container">
-               <div class="col-md-6">
-                   <h2>Poll</h2>
-                   <strong>{{ thread.poll.question }}</strong><br><br>
+           <div class="poll">
+               <div>
+                   <h2 class="poll-title">{{ thread.poll.question }}</h2>
+
 
                    <p>Here’s how the votes are so far:</p>
                  {% for subject in thread.poll.subjects.all %}
@@ -54,17 +44,32 @@
                </div>
            </div>
        {% endif %}
-
+    </div>
      {% if user.is_authenticated %}
-       <p>
-         <a href="{% url 'new_post' thread.id %}" class="btn btn-primary">New post</a>
-       </p>
+        <p class="thread-btn">
+            <a href="/forum/" class="btn btn-primary">Back</a>
+            <a href="{% url 'new_post' thread.id %}" class="btn btn-primary">New post</a>
+        </p>
      {% endif %}
-   </div>
  </div>
- <div class="container">
-   {% for post in thread.posts.all %}
-     {% include "forum/post.html" %}
-   {% endfor %}
- </div>
+   <table class="table table-hover">
+             <tbody>
+             <tr>
+                 <th class="align-center">
+                   CREATED
+                 </th>
+                 <th class="align-center">OWNER</th>
+                 <th class="align-center">LAST POST</th>
+             </tr>
+             <tr class="align-center">
+                 <td>
+                   <time datetime="{{ thread.created_at }}">
+                    {{ thread.created_at|started_time }}
+                   </time>
+                 </td>
+                 <td>{{ thread.user.first_name }} {{ thread.user.last_name }}</td>
+                 <td>{% last_posted_user_name thread %}</td>
+             </tr>
+           </tbody>
+         </table>
 {% endblock %}
