--- a/templates/coffees/coffees.html
+++ b/templates/coffees/coffees.html
@@ -5,7 +5,17 @@
     <div class="Buy-img">
         <h2>Purchase</h2>
     </div>
+<br>
+    <p class="text-center">Purchase your monthly coffee subscription package below with just a click.
+    <br><br>
 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur.
+    </p>
+    <h6 class="text-center">Please read the <a href="#"><b>Terms and Conditions</b></a> before purchasing</h6>
+    <hr>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -26,4 +36,8 @@
             {% endfor %}
         </tbody>
     </table>
+    <hr>
+    <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below and one of our team will get back to you as soon as possible.
+        <br><br>
+    <a class="btn btn-primary contactstarb" href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></p>
 {% endblock %}
