--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="{% static "css/font-awesome-4.7.0/css/font-awesome.css" %}">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
-    <link rel="stylesheet" href="{% static "css/blog.css" %}">
+    <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico" />
     {% block head_js %}{% endblock head_js %}
 
 </head>
@@ -62,8 +62,6 @@
 
    </div>
 
-<div class="container">
-
     {% if messages %}
         <div class="alert alert-success">
             <div class="messages">
@@ -73,6 +71,8 @@
             </div>
         </div>
     {% endif %}
+<div class="container">
+
 
    <div class="container">
        {% block content %}
@@ -91,5 +91,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js">
 </script>
-
+<script src="{% static "js/jquery.js" %}"></script>
 </html>
