--- a/templates/forum/thread.html
+++ b/templates/forum/thread.html
@@ -5,11 +5,18 @@
 
  <div class="row header">
 
- <div class="row header">
+ <div class="row header forum-header">
    <div class="jumbotron"><h1>{{ thread.name }}</h1></div>
+     <div class="thread-content">
+         <div class="box">
+             <iframe class="iframe-box" src="{% url 'threads' thread.subject.id %}"></iframe>
+         </div>
+    </div>
  </div>
 
-    <p class="align-center"><a href="/forum/"><b>Forum</b></a> | <b>Subject:</b> | <b>Thread:</b> {{ thread.name }}</p>
+    <p class="align-center"><a href="/forum/"><b>Forum</b></a> |
+        <a href="{% url 'threads' thread.subject.id %}"><b>Subject: </b>{{ thread.subject.name }} </a>|
+        <b>Thread:</b> {{ thread.name }}</p>
     <hr>
      <div class="col-md-7 posts">
          {% for post in thread.posts.all %}
@@ -45,13 +52,16 @@
            </div>
        {% endif %}
     </div>
-     {% if user.is_authenticated %}
+
         <p class="thread-btn">
-            <a href="/forum/" class="btn btn-primary">Back</a>
+            <a href="{% url 'threads' thread.subject.id %}" class="btn btn-primary backforum-btn">Back</a>
+            {% if user.is_authenticated %}
             <a href="{% url 'new_post' thread.id %}" class="btn btn-primary">New post</a>
+            {% endif %}
         </p>
-     {% endif %}
- </div>
+
+
+    </div>
    <table class="table table-hover">
              <tbody>
              <tr>
@@ -68,7 +78,9 @@
                    </time>
                  </td>
                  <td>{{ thread.user.first_name }} {{ thread.user.last_name }}</td>
-                 <td>{% last_posted_user_name thread %}</td>
+                 <td>{% for post in thread.posts.all %}
+                    {% last_posted_user_name thread %}
+                    {% endfor %}</td>
              </tr>
            </tbody>
          </table>
