--- a/templates/forum/thread_form.html
+++ b/templates/forum/thread_form.html
@@ -13,7 +13,7 @@
 
 
 {% block content %}
-   <section>
+   <section class="center-form">
        <div class="col-md-9">
            <form method="post" action="{% url 'new_thread' subject.id %}">
                {% csrf_token %}
@@ -30,7 +30,8 @@
                    {% endfor %}
                </div>
                <div class="form-group">
-                   <button type="submit" class="btn-primary"> Post New Thread</button>
+                   <a class="btn btn-primary" href="javascript:history.back()">Back</a>
+                   <button type="submit" class="btn btn-primary"> Post New Thread</button>
                </div>
            </form>
        </div>
