--- a/templates/forum/threads.html
+++ b/templates/forum/threads.html
@@ -22,11 +22,12 @@
             {% endfor %}
         </tbody>
     </table>
-   {% if user.is_authenticated %}
-     <p>
-        <a href="/forum/" class="btn btn-primary">Back</a>
-        <a href="{% url 'new_thread' subject.id %}" class="btn btn-primary">New Thread</a>
-     </p>
-   {% endif %}
+    <p>
+        <a href="/forum/" class="btn btn-primary backforum-btn">Back</a>
+        {% if user.is_authenticated %}
+       <a href="{% url 'new_thread' subject.id %}" class="btn btn-primary">New Thread</a>
+        {% endif %}
+    </p>
+ <div class="box"><iframe class="iframe-box" src="/forum/"></iframe></div>
  </div>
 {% endblock %}
