--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
-    <form role="form" method="post" action="{% url 'login' %}">
+    <form class="login" role="form" method="post" action="{% url 'login' %}">
         <legend>Login</legend>
         {% csrf_token %}
         {{ form| as_bootstrap }}
