--- a/templates/price.html
+++ b/templates/price.html
@@ -5,7 +5,22 @@
     <div class="Price-img">
         <h2>Price</h2>
     </div>
+<br>
+    <p class="text-center">
+        Come take a look at our price list of monthly coffee subscription packages below.
+        With the freshest coffee in town, we guarantee a great start to your day.
+        You will not only be purchasing the great tasting coffees we provide, but also the welcoming staff and friendly environment.
+        Hurry and become our regular customer!
 
+    <br><br>
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur.
+    </p>
+    <h6 class="text-center">Please read the <a href="#"><b>Terms and Conditions</b></a> before purchasing</h6>
+    <hr>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -24,4 +39,11 @@
             {% endfor %}
         </tbody>
     </table>
+    <hr>
+    <p class="text-center buypagelink">Like what you see? Head on over to our buy page <a href="/coffees"><b>here</b></a>.
+        Don't forget to create an account first!</p>
+    <hr>
+    <p class="text-center querycontact">Got a question? No worries, just email us over the query through the link below and one of our team will get back to you as soon as possible.
+    <br><br>
+        <a class="btn btn-primary contactstarb" href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></p>
 {% endblock %}
