--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
-    <form role="form" method="post" action="{% url 'register' %}">
+    <form class="login" role="form" method="post" action="{% url 'register' %}">
         <legend>Create a new account</legend>
         {% csrf_token %}
         {{ form| as_bootstrap }}
