Background colour and tweaks

--- a/templates/blog/blogposts.html
+++ b/templates/blog/blogposts.html
@@ -13,8 +13,16 @@
  <p class="text-center">
      Come check out our blogs below! Get involved with the local community and
      share your views by leaving a comment.
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+     <br><br>
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+     voluptate velit esse cillum dolore eu fugiat nulla pariatur.
  </p>
+
+ <form method="get" action="/results/" class="navbar-form text-center blogsearch">
+    <input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder=" Search...">
+ </form>
 
 {% for post in posts %}
     <hr>
