--- a/templates/forum/forum.html
+++ b/templates/forum/forum.html
@@ -11,6 +11,11 @@
     Create new threads, comment and even answer polls.
     ...go on, start exploring!
 </p>
+
+<form method="get" action="/results/" class="navbar-form text-center blogsearch">
+    <input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder=" Search...">
+ </form>
+
    {% load bootstrap_tags %}
    {% for subject in subjects %}
 <hr>
