--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,10 @@ a.options {
 }
 body {
     padding-top: 106px !important;
+    background-color: gainsboro;;
+}
+.container {
+    background-color: white;
 }
 .header1 {
     background-color: rgba(0,0,0,0.7);
@@ -46,7 +50,10 @@ body {
      padding-right: 5px;
   }
 }
-
+.collapse.navbar-collapse {
+    -moz-box-shadow: 0 0 30px 5px rgba(52, 52, 52, 0.5);
+    -webkit-box-shadow: 0 0 30px 5px rgba(52, 52, 52, 0.5);
+}
 @media (max-width: 860px) {
   .glyphicon-user,.glyphicon-log-in {
       display: none;
@@ -207,11 +214,11 @@ img.members {
 }
 /************ BLOG *************/
 .Blog-img {
-    background: url('../../media/images/Coffee9.jpg') no-repeat;
+    background: url('../../media/images/Coffee2.jpg') no-repeat;
     width: 100%;
     height: 350px;
     background-size: cover;
-    background-position: 50% 0%;
+    background-position: 50% 80%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -290,13 +297,16 @@ img.members {
 .btn:hover {
     background-color: rgba(34, 139, 34, 0.7);
 }
+.blogsearch {
+    margin-top: 20px;
+}
 /************ FORUM *************/
 .Forum-img {
-    background: url('../../media/images/Coffee2.jpg') no-repeat;
+    background: url('../../media/images/Coffee9.jpg') no-repeat;
     width: 100%;
     height: 350px;
     background-size: cover;
-    background-position: 50% 50%;
+    background-position: 50% 10%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -566,9 +576,15 @@ img.members {
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
 }
+@media (min-width: 768px) {
+  .contact-page {
+      padding-top: 30px;
+  }
+}
+
 /************ LOGIN *************/
 .login {
-    padding-top: 30px;
+    padding-top: 50px;
 }
 @media (max-width: 500px) {
   .login {
