--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    <div class="Contact-info col-sm-4">
+<div class="contact-page">
+    <div class="Contact-info col-lg-4">
       <h2>Opening hours</h2>
       <table class="table table-hover">
         <tbody>
@@ -57,10 +57,10 @@
 
     </div>
 
-    <div class="contact-map col-sm-8">
+    <div class="contact-map col-lg-8">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2403.7428243492977!2d-1.1868863841763329!3d52.953050379898464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879c21d7169116d%3A0xe4f6dd3f05668992!2sStarbucks+Coffee!5e0!3m2!1sen!2suk!4v1492970322766"
             width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
-
+</div>
 
 {% endblock %}
