--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="{% static "css/font-awesome-4.7.0/css/font-awesome.css" %}">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
-
-    <!--<link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico" />
--->
-{% block head_js %}{% endblock head_js %}
+    <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico" />
+    {% block head_js %}{% endblock head_js %}
 
 </head>
 <body>
