--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,158 @@
 {% extends 'base.html' %}
 {% block content %}
-   <div id="myCarousel" class="carousel slide gallery-main" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner gallery0" role="listbox">
-        <div class="item active">
-            <img src="../media/images/Coffee6.jpg" alt="...">
-            <h2>Price</h2>
-        </div>
+    <!-- CREDIT TO Scattered Polaroids Gallery
+    =========
 
-        <div class="item">
-            <img src="../media/images/Coffee7.jpg" alt="...">
-        </div>
+    A flat-style Polaroid gallery where the items are scattered randomly in a container. When a specific item is selected,
+    it will move to the middle while the other Polaroids will make space for it by moving to the sides. Optionally, an item
+    can have a backface which will be shown by flipping the Polaroid when clicking on the current navigation dot again.
 
-        <div class="item">
-            <img src="../media/images/Coffee8.jpg" alt="...">
-        </div>
+    [Article on Codrops](http://tympanus.net/codrops/?p=18402)
 
-        <div class="item">
-            <img src="../media/images/Coffee9.jpg" alt="...">
-        </div>
+    [Demo](http://tympanus.net/Development/ScatteredPolaroidsGallery/)
+
+    Integrate or build upon it for free in your personal or commercial projects. Don't republish, redistribute or sell "as-is".
+
+    Read more here: [License](http://tympanus.net/codrops/licensing/)
+
+    Photos by [Riza Nugraha](http://www.flickr.com/photos/rnugraha/), licensed under [Creative Commons Attribution 2.0 Generic](http://creativecommons.org/licenses/by/2.0/deed.en)</a>
+
+    [© Codrops 2013](http://www.codrops.com)
+
+
+    START Scattered Polaroids Gallery--->
+
+    <div class="img-polaroid">
+        <section id="photostack-2" class="photostack photostack-start">
+            <div>
+                <figure>
+                    <img src="../media/img/4.jpg" alt="img04"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Brighten Your Day</h2>
+                        <div class="photostack-back">
+                            <p>Start your day in a great mood. Our uplifting and positive environment will make sure
+                                that you leave with a smile on your face.</p>
+                        </div>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="../media/img/5.jpg" alt="img05"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Integrated Community</h2>
+                        <div class="photostack-back">
+                            <p>Our social themed website allows you to stay close to your local community through blogs
+                                and forums!
+                                Plus, monthly coffee subscriptions guarantee you to meet other regulars.</p>
+                        </div>
+                    </figcaption>
+                </figure>
+                <figure data-shuffle-iteration="2"><img src="../media/img/1.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Freshest Coffee</h2>
+                        <div class="photostack-back">
+                            <p>With the most freshly sourced coffee you can get, you won't be able to resist coming
+                                back!</p>
+                        </div>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="../media/img/2.jpg" alt="img02"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Fairtrade Beans</h2>
+                    </figcaption>
+                </figure>
+                <figure data-shuffle-iteration="3">
+                    <img src="../media/img/3.jpg" alt="img03"/>
+                    <figcaption>
+                        <h2 class="photostack-title">A Menu To Suit You</h2>
+                        <div class="photostack-back">
+                            <p>With the option to create your own coffee, you get to enjoy the personalised taste that
+                                you've always wanted.</p>
+                        </div>
+                    </figcaption>
+                </figure>
+                <figure data-shuffle-iteration="2">
+                    <img src="../media/img/6.jpg" alt="img06"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Friendly, Commited Staff</h2>
+                        <div class="photostack-back">
+                            <p>Our welcoming and friendly team will see to all your needs and be sure to recognise those
+                                regulars!</p>
+                        </div>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/7.jpg" alt="img07"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Relax</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/8.jpg" alt="img08"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Social</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/9.jpg" alt="img09"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Meet</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/10.jpg" alt="img10"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Read</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/11.jpg" alt="img11"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Engage</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/12.jpg" alt="img12"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Taste</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/13.jpg" alt="img13"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Fresh</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/14.jpg" alt="img14"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Boost</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/15.jpg" alt="img15"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Inspire</h2>
+                    </figcaption>
+                </figure>
+                <figure data-dummy>
+                    <img src="../media/img/16.jpg" alt="img16"/>
+                    <figcaption>
+                        <h2 class="photostack-title">Creativity</h2>
+                    </figcaption>
+                </figure>
+            </div>
+        </section>
     </div>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="/#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="/#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+    <script>
+        new Photostack(document.getElementById('photostack-2'), {
+            callback: function (item) {
+            }
+        });
+    </script>
 
+    <!-- END Scattered Polaroids Gallery --->
 
 {% endblock %}
