--- a/static/css/polaroid-css/component.css
+++ b/static/css/polaroid-css/component.css
@@ -10,7 +10,7 @@
 }
 
 .photostack {
-	background: #ddd;
+	background: url("../../../media/img/Background.jpg");
 	position: relative;
 	text-align: center;
 	overflow: hidden;
@@ -18,6 +18,8 @@
 
 .js .photostack {
 	height: 350px;
+	width: calc(100% + 30px);
+    left: -15px;
 }
 @media (min-width: 1000px) {
 	.js .photostack {
@@ -108,7 +110,7 @@
 	width: 30px;
 	height: 30px;
 	cursor: pointer;
-	background: #aaa;
+	background: rgba(34, 139, 34, 0.6);
 	border-radius: 50%;
 	text-align: center;
 	-webkit-transition: -webkit-transform 0.6s ease-in-out, background 0.3s;
@@ -144,7 +146,7 @@
 }
 
 .photostack nav span.current {
-	background: #888;
+	background: rgba(34, 139, 34, 0.7);
 	-webkit-transform: scale(1);
 	transform: scale(1);
 }
@@ -152,7 +154,7 @@
 .photostack nav span.current.flip {
 	-webkit-transform: scale(1) rotateY(-180deg) translateZ(-1px);
 	transform: scale(1) rotateY(-180deg) translateZ(-1px);
-	background: #555;
+	background: rgba(34, 139, 34, 0.7);
 }
 
 .photostack nav span.flippable::after {
