Home page Gallery

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     [© Codrops 2013](http://www.codrops.com)
 
 
-    START Scattered Polaroids Gallery--->
+    START Scattered Polaroids Gallery -->
 
     <div class="img-polaroid">
         <section id="photostack-2" class="photostack photostack-start">
@@ -153,6 +153,6 @@
         });
     </script>
 
-    <!-- END Scattered Polaroids Gallery --->
+    <!-- END Scattered Polaroids Gallery -->
 
 {% endblock %}
