--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="../media/images/favicon.ico" />
 
     <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/normalize.css" %}" />
-		<link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/demo.css" %}" />
-		<link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/component.css" %}" />
-		<script src="{% static "js/polaroid-js/modernizr.min.js" %}"></script>
-        <script src="{% static "js/jquery.js" %}"></script>
-        <script src="{% static "js/polaroid-js/classie.js" %}"></script>
-		<script src="{% static "js/polaroid-js/photostack.js" %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/demo.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "css/polaroid-css/component.css" %}" />
+    <script src="{% static "js/polaroid-js/modernizr.min.js" %}"></script>
+    <script src="{% static "js/jquery.js" %}"></script>
+    <script src="{% static "js/polaroid-js/classie.js" %}"></script>
+    <script src="{% static "js/polaroid-js/photostack.js" %}"></script>
     {% block head_js %}{% endblock head_js %}
 
 </head>
@@ -98,8 +98,6 @@
 
 <!-- script references -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js">
-</script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
 
 </html>
