--- a/templates/index.html
+++ b/templates/index.html
@@ -155,4 +155,17 @@
 
     <!-- END Scattered Polaroids Gallery -->
 
+    <h2 class="text-center home-title">Welcome to Starbex</h2>
+    <p class="text-center home-info">
+        <b>Starbex</b> is your local coffee shop with a twist. We offer <a href="/prices" style="color:#317eac">monthly subscription packages</a> for coffees which come with many benefits.
+        Our aim is to integrate the community online and in store with our friendly and sociable environment filled with regulars.
+<br><br>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur.
+    </p>
+    <p class="text-center buypagelink home-announcements">
+        Keep up to date with our announcements <a href="/threads/10/"><b>here</b></a>.
+        We update it weekly!</p>
 {% endblock %}
