--- a/templates/coffees/coffees.html
+++ b/templates/coffees/coffees.html
@@ -14,7 +14,49 @@
         aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
         fugiat nulla pariatur.
     </p>
-    <h6 class="text-center">Please read the <a href="#"><b>Terms and Conditions</b></a> before purchasing</h6>
+    <h6 class="text-center">Please read the <a href="/prices/" data-toggle="modal" data-target="#myModal"><b>Terms and Conditions</b></a> before purchasing</h6>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h2 class="modal-title">Terms & Conditions</h2>
+          </div>
+          <div class="modal-body">
+              <p><b>1.1 PURCHASES</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur..</p>
+              <p><b>1.2 CANCELLATIONS</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur..</p>
+              <p><b>2. GOVERNING LAW</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur..</p>
+              <p><b>3. INTELLECTUAL PROPERTY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur..</p>
+              <p><b>4. PRIVACY</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur..</p>
+             </div>
+            <div class="modal-footer">
+                <h6>Any questions please email us at <a href="mailto:contact@starbex.co.uk">contact@starbex.co.uk</a></h6>
+            </div>
+        </div>
+
+      </div>
+    </div>
+    <!--End Modal-->
+
     <hr>
     <table class="table table-striped">
         <thead>
